--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.6.5",
     "sequelize": "^6.35.1",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "nodemon": "^2.0.13"
   }
 }
